with the fixed elements appearing before the absolute element in the html, it is placed behind the absolute element.

--- a/style.css
+++ b/style.css
@@ -53,4 +53,5 @@ body {
     background-color: #0f0;
     position: fixed;
     top: 100px;
+    left: 50px;
 }
